# hermes-mcp-bridge

./: .gitignore  README.md  pyproject.toml
src/hermes_bridge/: __init__.py  server.py
